<resources>
    <string name="app_name">OpenCV4AndroidDemo</string>
    <string name="import_image">Import</string>
    <string name="default_image">Default</string>
    <string name="math_gray">Grey</string>
    <string name="math_binary">Binary</string>
    <string name="histograms">Histograms</string>
    <string name="canny">Canny</string>
    <string name="sepia">Sepia</string>
    <string name="sobel">Sobel</string>
    <string name="pixelize">Pixelize</string>
    <string name="posterize">Posterize</string>

    <string name="gauss">Gauss</string>
    <string name="median">Median</string>
    <string name="average">Average</string>

    <string name="morphology_expansion">Dilation</string>
    <string name="morphology_erose">Erode</string>
    <string name="morphology_open">Open</string>
    <string name="morphology_close">Close</string>
</resources>
