<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.topleex.opencv4androiddemo.MainActivity">
    <item
        android:id="@+id/right_menu_itme1"
        android:orderInCategory="100"
        android:title="@string/math_gray"
        app:showAsAction="never" />
    <item
        android:id="@+id/right_menu_itme2"
        android:orderInCategory="100"
        android:title="@string/math_binary"
        app:showAsAction="never" />
    <item
        android:id="@+id/right_menu_itme4"
        android:orderInCategory="100"
        android:title="@string/histograms"
        app:showAsAction="never" />
    <item
        android:id="@+id/right_menu_itme6"
        android:orderInCategory="100"
        android:title="@string/sobel"
        app:showAsAction="never" />
    <item
        android:id="@+id/right_menu_itme5"
        android:orderInCategory="100"
        android:title="@string/gauss"
        app:showAsAction="never" />
    <item
        android:id="@+id/right_menu_itme13"
        android:orderInCategory="100"
        android:title="@string/average"
        app:showAsAction="never" />
    <item
        android:id="@+id/right_menu_itme8"
        android:orderInCategory="100"
        android:title="@string/median"
        app:showAsAction="never" />
    <item
        android:id="@+id/right_menu_itme9"
        android:orderInCategory="100"
        android:title="@string/morphology_expansion"
        app:showAsAction="never" />
    <item
        android:id="@+id/right_menu_itme10"
        android:orderInCategory="100"
        android:title="@string/morphology_erose"
        app:showAsAction="never" />
    <item
        android:id="@+id/right_menu_itme11"
        android:orderInCategory="100"
        android:title="@string/morphology_open"
        app:showAsAction="never" />
    <item
        android:id="@+id/right_menu_itme12"
        android:orderInCategory="100"
        android:title="@string/morphology_close"
        app:showAsAction="never" />

</menu>
